2006-06-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-menu.c: (totem_languages_update),
	(totem_subtitles_update):
	  Pop down language/subtitle menus before replacing them
	  with a different one, otherwise the session might lock
	  up hard if a menu is replaced while being open (#342411).

2006-06-11  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mg" to ALL_LINGUAS.

2006-06-07  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: Add audio/vnd.rn-realaudio as a
	possible mime-type for Real Audio playlists (Closes: #344020)

2006-06-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_read_entire_file), (totem_pl_parser_add_ram),
	(totem_pl_parser_add_asf_reference_parser),
	(totem_pl_parser_add_asf_parser), (totem_pl_parser_add_pls),
	(totem_pl_parser_add_m3u), (totem_pl_parser_add_asx),
	(totem_pl_parser_add_smil),
	(totem_pl_parser_add_quicktime_metalink),
	(totem_pl_parser_add_desktop): use totem_pl_parser_read_entire_file
	to make sure that gnome_vfs_read_entire_file null-terminates the
	strings

2006-06-05  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add Impulse Tracker and MOD files
	to the supported types (Closes: #343605)

2006-06-05  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: Patch from Sjoerd Simons
        <sjoerd@luon.net> to use NPBool instead of PRBool, fixes running
	the plugin on PPC (Closes: #343851)

2006-05-23  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	  Add the 'goom' plugin from gst-plugins-good to the list of
	  required plugins for the GStreamer-0.10 backend.

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_stop_play_pipeline), (setup_vis_find_factory), (setup_vis):
	  Fix visualisation factory lookup: check for short name if we
	  don't find a match with the long name (necessary because the