@@ -127,7 +127,7 @@ if test x$HAVE_XINE = xno; then
 		MM="gstreamer-0.8 >= $GST_REQS gstreamer-gconf-0.8 >= $GSTPLUG_REQS gstreamer-interfaces-0.8 >= $GSTPLUG_REQS"
 	else
 		GST_REQS=0.10.1
-		GSTPLUG_REQS=0.10.1
+		GSTPLUG_REQS=0.10.7
 		MM="gstreamer-0.10 >= $GST_REQS gstreamer-plugins-base-0.10 >= $GSTPLUG_REQS gconf-2.0"
 	fi
 	PKG_CHECK_MODULES(GST, $MM,
